Fixed - hero paragraph width on mobile version

--- a/style.scss
+++ b/style.scss
@@ -223,6 +223,9 @@ header {
     width: 40%;
     color: #4f4f4f;
     padding: 1rem 0rem;
+    @media (max-width: 1024px) {
+      width: 60%;
+    }
     @media (max-width: 768px) {
       width: 100%;
     }
